[gd_scene load_steps=10 format=3 uid="uid://bw0ocppp3257y"]

[ext_resource type="Script" path="res://HUD/hud.gd" id="1_13wvf"]
[ext_resource type="FontFile" uid="uid://c1rtvtnimcle0" path="res://assets/fonts/monogram.ttf" id="1_io1tw"]
[ext_resource type="Texture2D" uid="uid://drkr3qpip454g" path="res://assets/art/hud/Fuel Gauge/fuel_gauge_00.png" id="2_3gtdg"]
[ext_resource type="Texture2D" uid="uid://dl52gki7yv4ay" path="res://assets/art/hud/Fuel Gauge/fuel_gauge_15.png" id="3_b70ee"]
[ext_resource type="Texture2D" uid="uid://cv4yv8itabrik" path="res://assets/art/hud/Depth Meter-1.png.png" id="4_swav1"]
[ext_resource type="Texture2D" uid="uid://b6hx2orf7hhv7" path="res://assets/art/hud/Gameplay_buttons-2.png.png" id="6_enq4h"]
[ext_resource type="Texture2D" uid="uid://c1ghl2u1vwgb3" path="res://assets/art/hud/Gameplay_buttons-4.png.png" id="7_irc30"]
[ext_resource type="Texture2D" uid="uid://ciscain52rncq" path="res://assets/art/hud/Gameplay_buttons-1.png.png" id="8_d27mi"]
[ext_resource type="Texture2D" uid="uid://b8ru1k5cki7lm" path="res://assets/art/hud/Gameplay_buttons-5.png.png" id="9_q4pdr"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_13wvf")

[node name="FuelGauge" type="TextureProgressBar" parent="."]
anchors_preset = -1
anchor_top = 0.071
anchor_bottom = 0.071
offset_top = -0.120003
offset_right = 280.0
offset_bottom = 39.88
grow_vertical = 2
value = 100.0
texture_under = ExtResource("3_b70ee")
texture_progress = ExtResource("2_3gtdg")

[node name="Fuel" type="Label" parent="."]
offset_right = 96.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_io1tw")
theme_override_font_sizes/font_size = 64
text = "FUEL"

[node name="DepthGauge" type="TextureRect" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_bottom = 128.0
grow_horizontal = 0
texture = ExtResource("4_swav1")

[node name="Depth" type="Label" parent="."]
z_index = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.029
anchor_right = 1.0
anchor_bottom = 0.029
offset_left = -128.0
offset_top = 0.119999
offset_bottom = 41.12
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_io1tw")
theme_override_font_sizes/font_size = 50
text = "DEPTH"
horizontal_alignment = 1

[node name="DepthCounter" type="Label" parent="."]
z_index = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.078
anchor_right = 1.0
anchor_bottom = 0.078
offset_left = -128.0
offset_top = 0.84
offset_bottom = 26.84
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_io1tw")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1

[node name="Meters" type="Label" parent="."]
z_index = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.111
anchor_right = 1.0
anchor_bottom = 0.111
offset_left = -128.0
offset_top = 0.0799942
offset_bottom = 27.08
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_io1tw")
theme_override_font_sizes/font_size = 32
text = "METERS"
horizontal_alignment = 1

[node name="MetersReached" type="Label" parent="."]
z_index = 1
anchors_preset = -1
anchor_left = 0.417
anchor_top = 0.368
anchor_right = 0.6
anchor_bottom = 0.406
offset_left = -0.160019
offset_top = 0.039978
offset_bottom = -0.320007
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_io1tw")
theme_override_font_sizes/font_size = 32
text = "METERS"
horizontal_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="Message" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.508
anchor_top = 0.258
anchor_right = 0.508
anchor_bottom = 0.258
offset_left = -107.84
offset_top = -25.76
offset_right = 108.16
offset_bottom = 25.24
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.917647, 0.282353, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_io1tw")
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PersonalBest" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.29
anchor_top = 0.444
anchor_right = 0.729
anchor_bottom = 0.489
offset_left = 0.799988
offset_top = 0.319977
offset_right = 0.0799866
offset_bottom = -0.0800171
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_io1tw")
theme_override_font_sizes/font_size = 40
text = "PERSONAL BEST!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DepthReached" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.75
anchor_bottom = 0.336
offset_left = -4.0
offset_top = -1.00002
offset_right = -4.00003
offset_bottom = -0.920013
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_io1tw")
theme_override_font_sizes/font_size = 32
text = "DEPTH REACHED:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DepthReachedValue" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.292
anchor_top = 0.335
anchor_right = 0.742
anchor_bottom = 0.371
offset_left = -0.160019
offset_top = -0.200012
offset_right = -0.160034
offset_bottom = -0.120026
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_io1tw")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Left" type="TouchScreenButton" parent="."]
position = Vector2(0, 560)
scale = Vector2(2.5, 2.5)
texture_normal = ExtResource("6_enq4h")
texture_pressed = ExtResource("7_irc30")
action = "move_left"

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2(320, 560)
scale = Vector2(2.5, 2.5)
texture_normal = ExtResource("8_d27mi")
texture_pressed = ExtResource("9_q4pdr")
action = "move_right"

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
